--- a/client/style.less
+++ b/client/style.less
@@ -1,3 +1,13 @@
 h1{
   color :red;
 }
+
+.image{
+  display: inline-block;
+  margin: 10px;
+  padding: 0;
+  width: 200px;
+  height: 200px;
+  border: 1px solid black;
+  background-size: cover;
+}
